Fix issue on header & spacing in selected work

--- a/src/assets/styles/components/_header.scss
+++ b/src/assets/styles/components/_header.scss
@@ -2,6 +2,9 @@
 	padding: 12px 0px;
 	width: 100%;
 	background: var(--background-default);
+	position: sticky;
+	top: 0;
+	z-index: 99;
 
 	@include mq-down(lg) {
 		padding: 12px 16px;
