--- a/src/assets/styles/components/home/_introduction.scss
+++ b/src/assets/styles/components/home/_introduction.scss
@@ -1,6 +1,4 @@
 .introduction {
-	grid-row: 3;
-
 	@include mq-down(lg) {
 		border-width: 0px 0px 1px 0px;
 	}
