--- a/src/assets/styles/components/home/_selected-work.scss
+++ b/src/assets/styles/components/home/_selected-work.scss
@@ -7,7 +7,7 @@
 		margin: 144px 0px 144px 0px;
 
 		h2 {
-			margin: 0px 44px 44px 44px;
+			margin: 0px 0px 44px 0px;
 
 			@include mq-down(lg) {
 				margin: 0px 16px 44px 16px;
@@ -32,6 +32,8 @@
 
 		.thumbnail-wrapper {
 			position: relative;
+			border-radius: 16px;
+			overflow: hidden;
 
 			.badge-draft {
 				position: absolute;
@@ -67,7 +69,7 @@
 
 		.description {
 			gap: 24px;
-			margin: 24px 44px 0px 44px;
+			margin: 24px 0px 0px 0px;
 			color: var(--text-primary);
 
 			@include mq-down(lg) {
